@@ -350,6 +350,7 @@ Settings.multipleMovies=Allow multiple movies per folder
 Settings.multipleMovies.hint=BE AWARE: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED!   
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
+Settings.nfo.discstyle=<html>&lt;DISC_FOLDER&gt; / video_ts.nfo<br />&lt;DISC_FOLDER&gt; / index.bdmv</html>
 Settings.videofiletypes=Video filetypes
 Settings.extrafiletypes=Subtitle and additional filetypes
 Settings.audiofiletypes=Audio filetypes
